--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "@tailwindcss/vite": "^4.0.14",
     "astro": "^5.5.3",
     "tailwindcss": "^4.0.14"
+  },
+  "devDependencies": {
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11"
   }
 }
