--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/sitemap": "^3.3.1",
     "@tailwindcss/vite": "^4.1.2",
     "astro": "^5.6.0",
     "tailwindcss": "^4.1.2"
