--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/cloudflare": "^12.5.2",
     "@astrojs/sitemap": "^3.4.0",
     "@tailwindcss/vite": "^4.1.2",
     "astro": "^5.7.12",
+    "sharp": "^0.34.1",
     "tailwindcss": "^4.1.2"
   },
   "devDependencies": {
