--- a/package.json
+++ b/package.json
@@ -1,22 +1,25 @@
 {
-  "name": "portfolio-2025",
-  "type": "module",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
-  "dependencies": {
-    "@astrojs/sitemap": "^3.4.1",
-    "@tailwindcss/vite": "^4.1.2",
-    "astro": "^5.9.0",
-    "sharp": "^0.34.1",
-    "tailwindcss": "^4.1.2"
-  },
-  "devDependencies": {
-    "prettier": "^3.5.3",
-    "prettier-plugin-tailwindcss": "^0.6.11"
-  }
+    "name": "portfolio-2025",
+    "type": "module",
+    "version": "0.0.1",
+    "engines": {
+        "node": ">=18.20.8"
+    },
+    "scripts": {
+        "dev": "astro dev",
+        "build": "astro build",
+        "preview": "astro preview",
+        "astro": "astro"
+    },
+    "dependencies": {
+        "@astrojs/sitemap": "^3.4.1",
+        "@tailwindcss/vite": "^4.1.2",
+        "astro": "^5.9.0",
+        "sharp": "^0.34.1",
+        "tailwindcss": "^4.1.2"
+    },
+    "devDependencies": {
+        "prettier": "^3.5.3",
+        "prettier-plugin-tailwindcss": "^0.6.11"
+    }
 }
